--- a/config.json
+++ b/config.json
@@ -1,7 +1,7 @@
 {
   "database": {
     "driver": "postgres",
-    "host": "54.179.176.147",
+    "host": "159.223.37.185",
     "port": 5432,
     "user": "scholarize",
     "password": "fypiscrying",
@@ -9,7 +9,7 @@
     "auto_migration": true
   },
   "meilisearch": {
-    "host": "http://meilisearch.arisusak.com",
+    "host": "http://localhost:7700",
     "api_key": "WeWillOnlyDoPreOralDefense",
     "index": {
       "research_paper": "research_paper_index",
@@ -39,7 +39,7 @@
   },
   "client": {
     "userpanel": "http://localhost:3000",
-    "adminpanel": "https://cpanel.scholarize.live"
+    "adminpanel": "http://localhost:3001"
   },
   "superadmin": {
     "email": "scholarize777@gmail.com"
@@ -49,8 +49,8 @@
     "gmail.com": true
   },
   "file_service": {
-    "base_url2": "http://localhost:8000/api",
-    "base_url": "https://abc.scholarize.live/api",
+    "base_url2": "http://localhost:8001/api",
+    "base_url": "http://localhost:8001/api",
     "backup_base_url": "http://10.104.0.3:8890/api",
     "endpoints": {
       "cleantext": "/cleantext",
