--- a/config.json
+++ b/config.json
@@ -1,7 +1,7 @@
 {
   "database": {
     "driver": "postgres",
-    "host": "54.179.176.147",
+    "host": "159.223.37.185",
     "port": 5432,
     "user": "scholarize",
     "password": "fypiscrying",
@@ -9,7 +9,7 @@
     "auto_migration": true
   },
   "meilisearch": {
-    "host": "http://meilisearch.arisusak.com",
+    "host": "http://159.223.37.185:2222",
     "api_key": "WeWillOnlyDoPreOralDefense",
     "index": {
       "research_paper": "research_paper_index",
@@ -41,6 +41,9 @@
     "userpanel": "http://localhost:3000",
     "adminpanel": "https://cpanel.scholarize.live"
   },
+  "python": {
+    "base_url": "http://localhost:8000"
+  },
   "superadmin": {
     "email": "scholarize777@gmail.com"
   },
@@ -50,7 +53,7 @@
   },
   "file_service": {
     "base_url2": "http://localhost:8000/api",
-    "base_url": "https://abc.scholarize.live/api",
+    "base_url": "http://159.223.37.185:2223/api",
     "backup_base_url": "http://10.104.0.3:8890/api",
     "endpoints": {
       "cleantext": "/cleantext",
